# monad-lrs

./: .gitignore  LICENSE  Setup.lhs  Test.hs  monad-lrs.cabal
Math/: LinearRecursive.hs
Math/LinearRecursive/: Monad.hs
Math/LinearRecursive/Internal/: Matrix.hs  Polynomial.hs  Vector.hs
